<resources>
    <string name="app_name">MovieApp</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nSativaor</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watch">Happy Watching</string>
    <string name="items">Items</string>
    <string name="close">Close</string>
    <string name="dialog_qr_text">Silahkan melakukan scanning pada counter tiket terdekat</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="simpan_password">Simpan Password</string>
</resources>