<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".onboarding.OnboardingOneActivity">

    <Button
        android:id="@+id/btn_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_rectangle_pink"
        android:text="@string/beli_tiket"
        android:textColor="@color/colorWhite"
        android:visibility="invisible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/pilih_bangku"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_white_24" />

    <TextView
        android:id="@+id/tv_kursi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Alita Battle"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kursi"
        app:srcCompat="@drawable/ic_path" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/layar_bioskop"
        android:textColor="@color/colorWhiteGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <LinearLayout
        android:id="@+id/ll_line"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">
        <ImageView
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="A"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/a4"
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_line2"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_line">
        <ImageView
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="B"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:src="@drawable/ic_rectangle_empty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="10dp"
        android:text="Booked"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_rectangle_booked" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="10dp"
        android:text="Empty"
        android:textColor="@color/colorWhite"
        app:drawableStartCompat="@drawable/ic_rectangle_empty"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="10dp"
        android:text="Selected"
        android:textColor="@color/colorWhite"
        app:drawableStartCompat="@drawable/ic_rectangle_selected"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintStart_toEndOf="@+id/textView19" />

</androidx.constraintlayout.widget.ConstraintLayout>